--- a/src/Plugins/ThingsGateway.OPCDA/OPCDAClientDebugDriverPage.razor
+++ b/src/Plugins/ThingsGateway.OPCDA/OPCDAClientDebugDriverPage.razor
@@ -12,6 +12,7 @@
 
 @using BlazorComponent;
 @using Microsoft.AspNetCore.Components.Web;
+@using Masa.Blazor.Presets;
 @using Microsoft.JSInterop;
 @using ThingsGateway.Core;
 @using ThingsGateway.Foundation;
@@ -40,8 +41,6 @@
                         </MButton>
                     </MRow>
 
-
-
                     <MButton Class="mx-1 my-1" Color="primary" OnClick="Read">
                         组读取
                     </MButton>
@@ -50,8 +49,19 @@
                         写入
                     </MButton>
 
+                    <MRow NoGutters>
+
+                        <MButton Class="mx-1 my-3" Color="primary" OnClick="()=>IsShowImportVariableList=!IsShowImportVariableList">
+                            <span>导入变量</span>
+                        </MButton>
+
+                    </MRow>
+
+
                 </MCol>
             </MCard>
+
+
         </MCol>
 
         <MCol Md="8">
@@ -99,12 +109,40 @@
 
 </MCard>
 
+<PModal @bind-Value="IsShowImportVariableList" OnCancel="() => IsShowImportVariableList = false"
+        Title=导入变量 Height=@("700") Persistent
+        MaxWidth="1500" OnSave="DownDeviceExport">
+    <ChildContent>
+        @if (IsShowImportVariableList)
+        {
+            <ImportVariable @ref=importVariable PLC="_plc"></ImportVariable>
+        }
+    </ChildContent>
 
+
+    <SaveContent Context="save">
+        <MButton Text Color="primary" OnClick="save.Click" Disabled="isDownExport" Loading="isDownExport">
+            <MLabel>导出Excel</MLabel>
+        </MButton>
+    </SaveContent>
+</PModal>
+@code{
+    bool IsShowImportVariableList;
+    private ImportVariable importVariable { get; set; }
+}
 @code
 {
     private OPCDAClientPage tcpClientPage;
     private ThingsGateway.Foundation.Adapter.OPCDA.OPCDAClient _plc;
-
+    private async Task DownDeviceExport()
+    {
+        var data = importVariable?.GetImportVariableList();
+        if(data!=null)
+        {
+            await DownDeviceExport(data?.Item1);
+            await DownDeviceExport(data?.Item2);
+        }
+    }
     protected override void OnAfterRender(bool firstRender)
     {
         if (firstRender)
