--- a/src/Plugins/ThingsGateway.OPCUA/OPCUAClient/OPCUAClientDebugDriverPage.razor
+++ b/src/Plugins/ThingsGateway.OPCUA/OPCUAClient/OPCUAClientDebugDriverPage.razor
@@ -11,6 +11,7 @@
 *@
 @namespace ThingsGateway.OPCUA
 
+@using Masa.Blazor.Presets;
 @using BlazorComponent;
 @using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.JSInterop;
@@ -64,6 +65,13 @@
                         写入
                     </MButton>
 
+                    <MRow NoGutters>
+
+                    <MButton Class="mx-1 my-3" Color="primary" OnClick="()=>IsShowImportVariableList=!IsShowImportVariableList">
+                        <span>导入变量</span>
+                    </MButton>
+
+                    </MRow>
                 </MCol>
             </MCard>
         </MCol>
@@ -113,11 +121,42 @@
 
 </MCard>
 
+<PModal @bind-Value="IsShowImportVariableList" OnCancel="() => IsShowImportVariableList = false"
+        Title=导入变量 Height=@("700") Persistent
+        MaxWidth="1500" OnSave="DownDeviceExport">
+    <ChildContent>
+        @if (IsShowImportVariableList)
+        {
+            <ImportVariable @ref=importVariable PLC="_plc"></ImportVariable>
+        }
+    </ChildContent>
 
+
+    <SaveContent Context="save">
+        <MButton Text Color="primary" OnClick="save.Click" Disabled="isDownExport" Loading="isDownExport">
+            <MLabel>导出Excel</MLabel>
+        </MButton>
+    </SaveContent>
+</PModal>
+
+@code {
+    bool IsShowImportVariableList;
+    private ImportVariable importVariable { get; set; }
+}
 @code
 {
     private OPCUAClientPage tcpClientPage;
     private ThingsGateway.Foundation.Adapter.OPCUA.OPCUAClient _plc;
+
+    private async Task DownDeviceExport()
+    {
+        var data = importVariable?.GetImportVariableList();
+        if (data != null)
+        {
+            await DownDeviceExport(data?.Item1);
+            await DownDeviceExport(data?.Item2);
+        }
+    }
 
     protected override void OnAfterRender(bool firstRender)
     {
