统一文件编码

--- a/src/ThingsGateway.Web.Page/Page/Index.razor
+++ b/src/ThingsGateway.Web.Page/Page/Index.razor
@@ -1,12 +1,12 @@
-@*
+ï»¿@*
 //------------------------------------------------------------------------------
-//  ´Ë´úÂë°æÈ¨ÉùÃ÷ÎªÈ«ÎÄ¼ş¸²¸Ç£¬ÈçÓĞÔ­×÷ÕßÌØ±ğÉùÃ÷£¬»áÔÚÏÂ·½ÊÖ¶¯²¹³ä
-//  ´Ë´úÂë°æÈ¨£¨³ıÌØ±ğÉùÃ÷ÍâµÄ´úÂë£©¹é×÷Õß±¾ÈËDiegoËùÓĞ
-//  Ô´´úÂëÊ¹ÓÃĞ­Òé×ñÑ­±¾²Ö¿âµÄ¿ªÔ´Ğ­Òé¼°¸½¼ÓĞ­Òé
-//  GiteeÔ´´úÂë²Ö¿â£ºhttps://gitee.com/diego2098/ThingsGateway
-//  GithubÔ´´úÂë²Ö¿â£ºhttps://github.com/kimdiego2098/ThingsGateway
-//  Ê¹ÓÃÎÄµµ£ºhttps://diego2098.gitee.io/thingsgateway/
-//  QQÈº£º605534569
+//  æ­¤ä»£ç ç‰ˆæƒå£°æ˜ä¸ºå…¨æ–‡ä»¶è¦†ç›–ï¼Œå¦‚æœ‰åŸä½œè€…ç‰¹åˆ«å£°æ˜ï¼Œä¼šåœ¨ä¸‹æ–¹æ‰‹åŠ¨è¡¥å……
+//  æ­¤ä»£ç ç‰ˆæƒï¼ˆé™¤ç‰¹åˆ«å£°æ˜å¤–çš„ä»£ç ï¼‰å½’ä½œè€…æœ¬äººDiegoæ‰€æœ‰
+//  æºä»£ç ä½¿ç”¨åè®®éµå¾ªæœ¬ä»“åº“çš„å¼€æºåè®®åŠé™„åŠ åè®®
+//  Giteeæºä»£ç ä»“åº“ï¼šhttps://gitee.com/diego2098/ThingsGateway
+//  Githubæºä»£ç ä»“åº“ï¼šhttps://github.com/kimdiego2098/ThingsGateway
+//  ä½¿ç”¨æ–‡æ¡£ï¼šhttps://diego2098.gitee.io/thingsgateway/
+//  QQç¾¤ï¼š605534569
 //------------------------------------------------------------------------------
 *@
 
@@ -23,7 +23,7 @@
             <MAvatar Size=40 Color="primary" Class="mx-2 white--text">
                 @UserResoures.CurrentUser?.Account.GetNameLen2()
             </MAvatar>
-            <MLabel>@(T("»¶Ó­»ØÀ´"))</MLabel>
+            <MLabel>@(T("æ¬¢è¿å›æ¥"))</MLabel>
                 <MLabel Class="mx-3">@UserResoures.CurrentUser?.Account</MLabel>
             </div>
         </MRow>
@@ -31,7 +31,7 @@
 
     <MCard MinHeight=120 Elevation="1" Class="ma-2">
         <MCardSubtitle Class="text-subtitle-1">
-            @T("¿ì½İ·½Ê½")
+            @T("å¿«æ·æ–¹å¼")
         </MCardSubtitle>
         <MDivider></MDivider>
         <MRow Class="pa-4" NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.Start">
@@ -52,7 +52,7 @@
     <MCol Md=12 Cols="12">
         <MCard MinHeight=400 Elevation="1" Class="ma-2">
             <MCardSubtitle Class="text-subtitle-1">
-                @T("RPCÈÕÖ¾")
+                @T("RPCæ—¥å¿—")
             </MCardSubtitle>
             <MDivider></MDivider>
             <MTimeline AlignTop Dense>
@@ -94,7 +94,7 @@
         <MCol Md=12 Cols="12">
             <MCard MinHeight=400 Elevation="1" Class="ma-2">
                 <MCardSubtitle Class="text-subtitle-1">
-                    @T("ºóÌ¨ÈÕÖ¾")
+                    @T("åå°æ—¥å¿—")
                 </MCardSubtitle>
                 <MDivider></MDivider>
                 <MTimeline AlignTop Dense>
@@ -125,7 +125,7 @@
     <MCol Md=6 Cols="12">
         <MCard MinHeight=400 Elevation="1" Class="ma-2">
             <MCardSubtitle Class="text-subtitle-1">
-                @T("·ÃÎÊÈÕÖ¾")
+                @T("è®¿é—®æ—¥å¿—")
             </MCardSubtitle>
             <MDivider></MDivider>
             <MTimeline AlignTop Dense>
@@ -152,7 +152,7 @@
     <MCol Md=6 Cols="12">
         <MCard MinHeight=400 Elevation="1" Class="ma-2">
             <MCardSubtitle Class="text-subtitle-1">
-                @T("²Ù×÷ÈÕÖ¾")
+                @T("æ“ä½œæ—¥å¿—")
             </MCardSubtitle>
             <MDivider></MDivider>
             <MTimeline AlignTop Dense>
