--- a/src/ThingsGateway.Web.Rcl/Page/UserCenter.razor
+++ b/src/ThingsGateway.Web.Rcl/Page/UserCenter.razor
@@ -1,12 +1,12 @@
-@*
+ï»¿@*
 //------------------------------------------------------------------------------
-//  ´Ë´úÂë°æÈ¨ÉùÃ÷ÎªÈ«ÎÄ¼ş¸²¸Ç£¬ÈçÓĞÔ­×÷ÕßÌØ±ğÉùÃ÷£¬»áÔÚÏÂ·½ÊÖ¶¯²¹³ä
-//  ´Ë´úÂë°æÈ¨£¨³ıÌØ±ğÉùÃ÷ÍâµÄ´úÂë£©¹é×÷Õß±¾ÈËDiegoËùÓĞ
-//  Ô´´úÂëÊ¹ÓÃĞ­Òé×ñÑ­±¾²Ö¿âµÄ¿ªÔ´Ğ­Òé¼°¸½¼ÓĞ­Òé
-//  GiteeÔ´´úÂë²Ö¿â£ºhttps://gitee.com/diego2098/ThingsGateway
-//  GithubÔ´´úÂë²Ö¿â£ºhttps://github.com/kimdiego2098/ThingsGateway
-//  Ê¹ÓÃÎÄµµ£ºhttps://diego2098.gitee.io/thingsgateway/
-//  QQÈº£º605534569
+//  æ­¤ä»£ç ç‰ˆæƒå£°æ˜ä¸ºå…¨æ–‡ä»¶è¦†ç›–ï¼Œå¦‚æœ‰åŸä½œè€…ç‰¹åˆ«å£°æ˜ï¼Œä¼šåœ¨ä¸‹æ–¹æ‰‹åŠ¨è¡¥å……
+//  æ­¤ä»£ç ç‰ˆæƒï¼ˆé™¤ç‰¹åˆ«å£°æ˜å¤–çš„ä»£ç ï¼‰å½’ä½œè€…æœ¬äººDiegoæ‰€æœ‰
+//  æºä»£ç ä½¿ç”¨åè®®éµå¾ªæœ¬ä»“åº“çš„å¼€æºåè®®åŠé™„åŠ åè®®
+//  Giteeæºä»£ç ä»“åº“ï¼šhttps://gitee.com/diego2098/ThingsGateway
+//  Githubæºä»£ç ä»“åº“ï¼šhttps://github.com/kimdiego2098/ThingsGateway
+//  ä½¿ç”¨æ–‡æ¡£ï¼šhttps://diego2098.gitee.io/thingsgateway/
+//  QQç¾¤ï¼š605534569
 //------------------------------------------------------------------------------
 *@
 
@@ -20,13 +20,13 @@
 
     <MTabs @bind-Value="tab">
         <MTab Style="height:50px;">
-            @T("»ù±¾ĞÅÏ¢")
+            @T("åŸºæœ¬ä¿¡æ¯")
         </MTab>
         <MTab>
-            @T("¿ì½İ·½Ê½")
+            @T("å¿«æ·æ–¹å¼")
         </MTab>
         <MTab>
-            @T("ĞŞ¸ÄÃÜÂë")
+            @T("ä¿®æ”¹å¯†ç ")
         </MTab>
     </MTabs>
 
@@ -51,7 +51,7 @@
                     </MRow>
                     <MCardActions>
                         <MButton Class="mt-8" OnClick=OnUpdateUserInfo Color="primary">
-                            @T("±£´æ")
+                            @T("ä¿å­˜")
                         </MButton>
                     </MCardActions>
                 </MCard>
@@ -67,7 +67,7 @@
 
                     <MCardActions>
                         <MButton Class="mt-8" OnClick=OnShortcutSave Color="primary">
-                            @T("±£´æ")
+                            @T("ä¿å­˜")
                         </MButton>
                     </MCardActions>
                 </MCard>
@@ -95,7 +95,7 @@
                     </MRow>
                     <MCardActions>
                         <MButton Class="mt-8" OnClick=OnUpdatePasswordInfo Color="primary">
-                            @T("±£´æ")
+                            @T("ä¿å­˜")
                         </MButton>
                     </MCardActions>
                 </MCard>
@@ -137,21 +137,21 @@
     {
         await UserCenterService.UpdateWorkbench(_menusChoice);
         await MainLayout.MenuChangeAsync();
-        await PopupService.EnqueueSnackbarAsync(T("³É¹¦"), AlertTypes.Success);
+        await PopupService.EnqueueSnackbarAsync(T("æˆåŠŸ"), AlertTypes.Success);
     }
     async Task OnUpdateUserInfo()
     {
         await UserCenterService.UpdateUserInfo(_updateInfoInput);
         await MainLayout.UserChangeAsync();
 
-        await PopupService.EnqueueSnackbarAsync(T("³É¹¦"), AlertTypes.Success);
+        await PopupService.EnqueueSnackbarAsync(T("æˆåŠŸ"), AlertTypes.Success);
     }
     async Task OnUpdatePasswordInfo()
     {
         _passwordInfoInput.Id = UserResoures.CurrentUser.Id;
         await UserCenterService.EditPassword(_passwordInfoInput);
         await MainLayout.UserChangeAsync();
-        await PopupService.EnqueueSnackbarAsync(T("³É¹¦£¬½«ÖØĞÂµÇÂ¼"), AlertTypes.Success);
+        await PopupService.EnqueueSnackbarAsync(T("æˆåŠŸï¼Œå°†é‡æ–°ç™»å½•"), AlertTypes.Success);
         await Task.Delay(2000);
         await AjaxService.GotoAsync("/");
     }
